# picozx81

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _config.yml  buildall  index.md
.github/workflows/: build.yml
boards/: dviboard.h  lcdmakerboard.h  lcdws28board.h  mcu.h  olimexpcboard.h  picomitevgaboard.h  picozxboard.h  picozxrealboard.h  vga332board.h  vgaboard.h  vgamaker222cboard.h  vgamakerboard.h  wspizeroboard.h
config/: iopins.h
convert_rom/: CMakeLists.txt  convert_rom.c
display/: display.h  display_common.c  display_dvi.c  display_lcd.c  display_priv.h  display_vga.c  spi_lcd.pio  tmds_chroma.S  tmds_chroma.h  tmds_double.S  tmds_double.h  zx80bmp.h  zx81bmp.h
examples/: README.md  config.ini
examples/ZX80/: config.ini
examples/ZX80-4K/: config.ini
examples/ZX80-4K/Chroma/: config.ini
examples/ZX80/Chroma/: config.ini
examples/ZX81/: config.ini  eel.p  simple.p
examples/ZX81/1K/: config.ini  simple.p
examples/ZX81/ARX/: config.ini
examples/ZX81/Chroma/: config.ini
examples/ZX81/Demos/: config.ini  head.asm  head.p
examples/ZX81/LowRAM/: config.ini  simple.p
examples/ZX81/NTSC/: config.ini  simple.p
examples/ZX81/Sounds/: config.ini
examples/ZX81/TV-Sound/: config.ini
examples/ZX81/UDG/: config.ini  simple.p
examples/ZX81/WRX/: config.ini  simple.p
examples/ZX81X2/: config.ini  flicker.p  simple.p
scanvideo/: CMakeLists.txt
scanvideo/pico_scanvideo/: CMakeLists.txt
scanvideo/pico_scanvideo_dpi/: CMakeLists.txt  scanvideo.c
sdcard/: sdcard.c  sdcard.h
src/: Z80.c  Z80.h  cbops.h  common.h  edops.h  emuapi.cpp  emuapi.h  emukeyboard.cpp  emukeyboard.h  emupriv.h  emusnap.h  emusound.cpp  emusound.h  emuvideo.cpp  emuvideo.h  hid_usb.c  hid_usb.h  loadp.c  loadp.h  menu.cpp  menu.h  pico81.cpp  sound.c  sound.h  todo.txt  z80.c  z80.h  z80ops.h  zx80rom.h  zx81rom.h  zx81x2rom.h  zx8x.c  zx8x.h
uf2/: picozx81_dvi.uf2  picozx81_dvi_hdmi_sound.uf2  picozx81_dvi_hdmi_sound_rp2040.uf2  picozx81_dvi_hdmi_sound_rp2350.uf2  picozx81_dvi_rp2040.uf2  picozx81_dvi_rp2350.uf2  picozx81_lcdmaker.uf2  picozx81_lcdmaker_rp2040.uf2  picozx81_lcdws28.uf2  picozx81_lcdws28_rp2040.uf2  picozx81_lcdws28_rp2350.uf2  picozx81_olimexpc.uf2  picozx81_olimexpc_hdmi_sound.uf2  picozx81_olimexpc_hdmi_sound_rp2040.uf2  picozx81_olimexpc_hdmi_sound_rp2350.uf2  picozx81_olimexpc_rp2040.uf2  picozx81_olimexpc_rp2350.uf2  picozx81_picomitevga.uf2  picozx81_picomitevga_rp2040.uf2  picozx81_picomitevga_rp2350.uf2  picozx81_picozx.uf2  picozx81_picozx_lcd.uf2  picozx81_picozx_lcd_rp2040.uf2  picozx81_picozx_rp2040.uf2  picozx81_picozxreal.uf2  picozx81_picozxreal_rp2040.uf2  picozx81_vga.uf2  picozx81_vga332.uf2  picozx81_vga332_rp2040.uf2  picozx81_vga332_rp2350.uf2  picozx81_vga_rp2040.uf2  picozx81_vga_rp2350.uf2  picozx81_vgamaker222c.uf2  picozx81_vgamaker222c_rp2040.uf2  picozx81_wspizero_hdmi_sound.uf2  picozx81_wspizero_hdmi_sound_rp2040.uf2
usb/: README.md  hid_app.c  hid_app.h  hid_host_info.c  hid_host_joy.c  hid_host_joy.h  hid_host_utils.h  hid_rip.c  hid_rip.h  tusb_config.h
